--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image:linear-gradient(to right, rgb(109, 43, 116), rgb(160, 54, 230));
+  background-image:linear-gradient(to right, rgb(36, 91, 112), rgb(88, 70, 146));
+  color: white;
 }
 
 code {
